compiler/tools/fpp-to-dict/test/top/missingFwOpcodeType.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/missingFwOpcodeType.fpp:26.1
topology T {
^
error: cannot find type `FwOpcodeType` in this scope
note: when constructing a dictionary, the type FwOpcodeType must be defined
